# spmd-jax-template

./: .clangd  CMakeLists.txt  bench.py  collectives_a100_1n.md  collectives_a100_2n.md  collectives_v100_1n.md  collectives_v100_2n.md  compile_commands.json  pyproject.toml  test.py
csrc/include/: mpi_ops.hpp  nccl_ops.hpp
csrc/src/: extensions.cc
nccl_mpi/: CMakeLists.txt
nccl_mpi/include/: memory_manager.hpp  mpi_ops.h  nccl_ops.h  runner.h
nccl_mpi/src/: runner.cc
nccl_only/: CMakeLists.txt
src/: __init__.py  main.cc
src/nccl_mpi_benchmarks/: __init__.py  ops.py
src/nccl_mpi_benchmarks/_src/: __init__.py
tests/: adding_elements.py
