[build-system]
requires = [
    "scikit-build-core >=0.4.3", 
    "nanobind >=1.3.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "nccl_mpi_benchmarks"
version = "0.1.0"
description = "NCCL MPI Benchmarks"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Wassim Kabalan"}]
classifiers = ["License :: OSI Approved :: BSD License"]
license.file = "LICENSE"
keywords = ["nccl", "mpi", "benchmarks"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
